# goit-ds-hw-01

./: .dockerignore  Dockerfile  addressbook.pkl  classes.py  com_parser.py  init.py  main.py  pyproject.toml
