[project]
name = "ds-hw-01"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrii538",email = "avdereng@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "pyjokes (==0.8.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
